// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Task: convert > accept and discard changes with git 1`] = `
"[STARTED] Initialize
[DATA] Setting up config for basic
[SUCCESS] Initialize
[STARTED] Install dependencies
[DATA] Installing devDependencies: @types/node, @typescript-eslint/eslint-plugin, @typescript-eslint/parser, eslint, eslint-config-prettier, eslint-plugin-prettier, prettier, typescript
[DATA] Setting resolutions: typescript@^5.0.4
[SUCCESS] Install dependencies
[STARTED] Create tsconfig.json
[SUCCESS] Create tsconfig.json
[STARTED] Create eslint config
[DATA] Create .eslintrc.js, extending rehearsal default eslint-related config
[SUCCESS] Create eslint config
[STARTED] Analyze project
[DATA] ? We have found multiple packages in your project, select the one to migrate:  
[DATA]  basic(no progress found)
[DATA]  We have found multiple packages in your project, select the one to migrate:  basic(no progress found)
[DATA] Running migration on <tmp-path>
[SUCCESS] Analyze project
[STARTED] Convert JS files to TS
[DATA] git mv /foo.js to /foo.ts
[DATA] git mv /depends-on-foo.js to /depends-on-foo.ts
[DATA] git mv /index.js to /index.ts
[DATA] processing file: /foo.ts
[DATA] Please view the migration changes for <tmp-path>/foo.ts:
[DATA] ? Select an option to continue:  
[DATA]  Accept
[DATA]   Edit
[DATA]   Discard
[DATA]  Select an option to continue:  Accept
[DATA] processing file: /depends-on-foo.ts
[DATA] Please view the migration changes for <tmp-path>/depends-on-foo.ts:
[DATA] ? Select an option to continue:  
[DATA]  Accept
[DATA]   Edit
[DATA]   Discard
[DATA]  Select an option to continue:  Accept
[DATA] processing file: /index.ts
[DATA] Please view the migration changes for <tmp-path>/index.ts:
[DATA] ? Select an option to continue:  
[DATA]  Accept
[DATA]   Edit
[DATA]   Discard
[DATA]  Select an option to continue:  Discard
[DATA]  Select an option to continue:  Discard
[DATA]  Select an option to continue:  Discard
[TITLE] Migration Complete
[TITLE]   2 JS files converted to TS
[TITLE]   4 errors caught by rehearsal
[TITLE]   3 have been fixed by rehearsal
[TITLE]   1 errors need to be fixed manually
[TITLE]     -- 0 ts errors, marked by @ts-expect-error @rehearsal TODO
[TITLE]     -- 1 eslint errors, with details in the report
[SUCCESS] Migration Complete
[SUCCESS]   2 JS files converted to TS
[SUCCESS]   4 errors caught by rehearsal
[SUCCESS]   3 have been fixed by rehearsal
[SUCCESS]   1 errors need to be fixed manually
[SUCCESS]     -- 0 ts errors, marked by @ts-expect-error @rehearsal TODO
[SUCCESS]     -- 1 eslint errors, with details in the report"
`;

exports[`Task: convert > accept changes without git 1`] = `
"[STARTED] Initialize
[DATA] Setting up config for basic
[SUCCESS] Initialize
[STARTED] Install dependencies
[DATA] Installing devDependencies: @types/node, @typescript-eslint/eslint-plugin, @typescript-eslint/parser, eslint, eslint-config-prettier, eslint-plugin-prettier, prettier, typescript
[DATA] Setting resolutions: typescript@^5.0.4
[SUCCESS] Install dependencies
[STARTED] Create tsconfig.json
[SUCCESS] Create tsconfig.json
[STARTED] Create eslint config
[DATA] Create .eslintrc.js, extending rehearsal default eslint-related config
[SUCCESS] Create eslint config
[STARTED] Analyze project
[DATA] ? We have found multiple packages in your project, select the one to migrate:  
[DATA]  basic(no progress found)
[DATA]  We have found multiple packages in your project, select the one to migrate:  basic(no progress found)
[DATA] Running migration on <tmp-path>
[SUCCESS] Analyze project
[STARTED] Convert JS files to TS
[DATA] git mv /foo.js to /foo.ts
[DATA] git mv /depends-on-foo.js to /depends-on-foo.ts
[DATA] git mv /index.js to /index.ts
[DATA] processing file: /foo.ts
[DATA] Please view the migration changes for <tmp-path>/foo.ts:
[DATA] ? Select an option to continue:  
[DATA]  Accept
[DATA]   Edit
[DATA]   Discard
[DATA]  Select an option to continue:  Accept
[DATA] processing file: /depends-on-foo.ts
[DATA] Please view the migration changes for <tmp-path>/depends-on-foo.ts:
[DATA] ? Select an option to continue:  
[DATA]  Accept
[DATA]   Edit
[DATA]   Discard
[DATA]  Select an option to continue:  Accept
[DATA] processing file: /index.ts
[DATA] Please view the migration changes for <tmp-path>/index.ts:
[DATA] ? Select an option to continue:  
[DATA]  Accept
[DATA]   Edit
[DATA]   Discard
[DATA]  Select an option to continue:  Accept
[TITLE] Migration Complete
[TITLE]   3 JS files converted to TS
[TITLE]   4 errors caught by rehearsal
[TITLE]   3 have been fixed by rehearsal
[TITLE]   1 errors need to be fixed manually
[TITLE]     -- 0 ts errors, marked by @ts-expect-error @rehearsal TODO
[TITLE]     -- 1 eslint errors, with details in the report
[SUCCESS] Migration Complete
[SUCCESS]   3 JS files converted to TS
[SUCCESS]   4 errors caught by rehearsal
[SUCCESS]   3 have been fixed by rehearsal
[SUCCESS]   1 errors need to be fixed manually
[SUCCESS]     -- 0 ts errors, marked by @ts-expect-error @rehearsal TODO
[SUCCESS]     -- 1 eslint errors, with details in the report"
`;

exports[`Task: convert > cancel prompt in interactive mode 1`] = `
"[STARTED] Initialize
[DATA] Setting up config for basic
[SUCCESS] Initialize
[STARTED] Install dependencies
[DATA] Installing devDependencies: @types/node, @typescript-eslint/eslint-plugin, @typescript-eslint/parser, eslint, eslint-config-prettier, eslint-plugin-prettier, prettier, typescript
[DATA] Setting resolutions: typescript@^5.0.4
[SUCCESS] Install dependencies
[STARTED] Create tsconfig.json
[SUCCESS] Create tsconfig.json
[STARTED] Create eslint config
[DATA] Create .eslintrc.js, extending rehearsal default eslint-related config
[SUCCESS] Create eslint config
[STARTED] Analyze project
[DATA] ? We have found multiple packages in your project, select the one to migrate:  
[DATA]  basic(no progress found)
[DATA]  We have found multiple packages in your project, select the one to migrate:  basic(no progress found)
[DATA] Running migration on <tmp-path>
[SUCCESS] Analyze project
[STARTED] Convert JS files to TS
[DATA] git mv /foo.js to /foo.ts
[DATA] git mv /depends-on-foo.js to /depends-on-foo.ts
[DATA] git mv /index.js to /index.ts
[DATA] processing file: /foo.ts
[DATA] Please view the migration changes for <tmp-path>/foo.ts:
[DATA] ? Select an option to continue:  
[DATA]  Accept
[DATA]   Edit
[DATA]   Discard
[DATA]  Select an option to continue:  
[FAILED] Cancelled prompt."
`;

exports[`Task: convert > generate reports 1`] = `
"[STARTED] Initialize
[DATA] Setting up config for basic
[SUCCESS] Initialize
[STARTED] Install dependencies
[DATA] Installing devDependencies: @types/node, @typescript-eslint/eslint-plugin, @typescript-eslint/parser, eslint, eslint-config-prettier, eslint-plugin-prettier, prettier, typescript
[DATA] Setting resolutions: typescript@^5.0.4
[SUCCESS] Install dependencies
[STARTED] Create tsconfig.json
[SUCCESS] Create tsconfig.json
[STARTED] Create eslint config
[DATA] Create .eslintrc.js, extending rehearsal default eslint-related config
[SUCCESS] Create eslint config
[STARTED] Analyze project

[DATA] Running migration on basic
[SUCCESS] Analyze project
[STARTED] Convert JS files to TS
[DATA] git mv /foo.js to /foo.ts
[DATA] git mv /depends-on-foo.js to /depends-on-foo.ts
[DATA] git mv /index.js to /index.ts
[DATA] processing file: /foo.ts
[DATA] processing file: /depends-on-foo.ts
[DATA] processing file: /index.ts
[TITLE] Migration Complete
[TITLE] 
[TITLE] 
[TITLE]   3 JS files converted to TS
[TITLE] 
[TITLE]   4 errors caught by rehearsal
[TITLE] 
[TITLE]   3 have been fixed by rehearsal
[TITLE] 
[TITLE]   1 errors need to be fixed manually
[TITLE] 
[TITLE]     -- 0 ts errors, marked by @ts-expect-error @rehearsal TODO
[TITLE] 
[TITLE]     -- 1 eslint errors, with details in the report
[TITLE] 
[SUCCESS] Migration Complete
[SUCCESS] 
[SUCCESS] 
[SUCCESS]   3 JS files converted to TS
[SUCCESS] 
[SUCCESS]   4 errors caught by rehearsal
[SUCCESS] 
[SUCCESS]   3 have been fixed by rehearsal
[SUCCESS] 
[SUCCESS]   1 errors need to be fixed manually
[SUCCESS] 
[SUCCESS]     -- 0 ts errors, marked by @ts-expect-error @rehearsal TODO
[SUCCESS] 
[SUCCESS]     -- 1 eslint errors, with details in the report
[SUCCESS] 
"
`;

exports[`Task: convert > migrate from default all files .js in root 1`] = `
"[STARTED] Initialize
[DATA] Setting up config for basic
[SUCCESS] Initialize
[STARTED] Install dependencies
[DATA] Installing devDependencies: @types/node, @typescript-eslint/eslint-plugin, @typescript-eslint/parser, eslint, eslint-config-prettier, eslint-plugin-prettier, prettier, typescript
[DATA] Setting resolutions: typescript@^5.0.4
[SUCCESS] Install dependencies
[STARTED] Create tsconfig.json
[SUCCESS] Create tsconfig.json
[STARTED] Create eslint config
[DATA] Create .eslintrc.js, extending rehearsal default eslint-related config
[SUCCESS] Create eslint config
[STARTED] Analyze project

[DATA] Running migration on basic
[SUCCESS] Analyze project
[STARTED] Convert JS files to TS
[DATA] git mv /foo.js to /foo.ts
[DATA] git mv /depends-on-foo.js to /depends-on-foo.ts
[DATA] git mv /index.js to /index.ts
[DATA] processing file: /foo.ts
[DATA] processing file: /depends-on-foo.ts
[DATA] processing file: /index.ts
[TITLE] Migration Complete
[TITLE] 
[TITLE] 
[TITLE]   3 JS files converted to TS
[TITLE] 
[TITLE]   4 errors caught by rehearsal
[TITLE] 
[TITLE]   3 have been fixed by rehearsal
[TITLE] 
[TITLE]   1 errors need to be fixed manually
[TITLE] 
[TITLE]     -- 0 ts errors, marked by @ts-expect-error @rehearsal TODO
[TITLE] 
[TITLE]     -- 1 eslint errors, with details in the report
[TITLE] 
[SUCCESS] Migration Complete
[SUCCESS] 
[SUCCESS] 
[SUCCESS]   3 JS files converted to TS
[SUCCESS] 
[SUCCESS]   4 errors caught by rehearsal
[SUCCESS] 
[SUCCESS]   3 have been fixed by rehearsal
[SUCCESS] 
[SUCCESS]   1 errors need to be fixed manually
[SUCCESS] 
[SUCCESS]     -- 0 ts errors, marked by @ts-expect-error @rehearsal TODO
[SUCCESS] 
[SUCCESS]     -- 1 eslint errors, with details in the report
[SUCCESS] 
"
`;

exports[`Task: convert > migrate from specific entrypoint 1`] = `
"[STARTED] Initialize
[DATA] Setting up config for basic
[SUCCESS] Initialize
[STARTED] Install dependencies
[DATA] Installing devDependencies: @types/node, @typescript-eslint/eslint-plugin, @typescript-eslint/parser, eslint, eslint-config-prettier, eslint-plugin-prettier, prettier, typescript
[DATA] Setting resolutions: typescript@^5.0.4
[SUCCESS] Install dependencies
[STARTED] Create tsconfig.json
[SUCCESS] Create tsconfig.json
[STARTED] Create eslint config
[DATA] Create .eslintrc.js, extending rehearsal default eslint-related config
[SUCCESS] Create eslint config
[STARTED] Analyze project

[DATA] Running migration on basic
[SUCCESS] Analyze project
[STARTED] Convert JS files to TS
[DATA] git mv /foo.js to /foo.ts
[DATA] git mv /depends-on-foo.js to /depends-on-foo.ts
[DATA] processing file: /foo.ts
[DATA] processing file: /depends-on-foo.ts
[TITLE] Migration Complete
[TITLE] 
[TITLE] 
[TITLE]   2 JS files converted to TS
[TITLE] 
[TITLE]   2 errors caught by rehearsal
[TITLE] 
[TITLE]   1 have been fixed by rehearsal
[TITLE] 
[TITLE]   1 errors need to be fixed manually
[TITLE] 
[TITLE]     -- 0 ts errors, marked by @ts-expect-error @rehearsal TODO
[TITLE] 
[TITLE]     -- 1 eslint errors, with details in the report
[TITLE] 
[SUCCESS] Migration Complete
[SUCCESS] 
[SUCCESS] 
[SUCCESS]   2 JS files converted to TS
[SUCCESS] 
[SUCCESS]   2 errors caught by rehearsal
[SUCCESS] 
[SUCCESS]   1 have been fixed by rehearsal
[SUCCESS] 
[SUCCESS]   1 errors need to be fixed manually
[SUCCESS] 
[SUCCESS]     -- 0 ts errors, marked by @ts-expect-error @rehearsal TODO
[SUCCESS] 
[SUCCESS]     -- 1 eslint errors, with details in the report
[SUCCESS] 
"
`;

exports[`Task: convert > view changes in $EDITOR 1`] = `
"[STARTED] Initialize
[DATA] Setting up config for basic
[SUCCESS] Initialize
[STARTED] Install dependencies
[DATA] Installing devDependencies: @types/node, @typescript-eslint/eslint-plugin, @typescript-eslint/parser, eslint, eslint-config-prettier, eslint-plugin-prettier, prettier, typescript
[DATA] Setting resolutions: typescript@^5.0.4
[SUCCESS] Install dependencies
[STARTED] Create tsconfig.json
[SUCCESS] Create tsconfig.json
[STARTED] Create eslint config
[DATA] Create .eslintrc.js, extending rehearsal default eslint-related config
[SUCCESS] Create eslint config
[STARTED] Analyze project
[DATA] ? We have found multiple packages in your project, select the one to migrate:  
[DATA]  basic(no progress found)
[DATA]  We have found multiple packages in your project, select the one to migrate:  basic(no progress found)
[DATA] Running migration on <tmp-path>
[SUCCESS] Analyze project
[STARTED] Convert JS files to TS
[DATA] git mv /foo.js to /foo.ts
[DATA] git mv /depends-on-foo.js to /depends-on-foo.ts
[DATA] git mv /index.js to /index.ts
[DATA] processing file: /foo.ts
[DATA] Please view the migration changes for <tmp-path>/foo.ts:
[DATA] ? Select an option to continue:  
[DATA]  Accept
[DATA]   Edit
[DATA]   Discard
[DATA]  Select an option to continue:  Accept
[DATA] processing file: /depends-on-foo.ts
[DATA] Please view the migration changes for <tmp-path>/depends-on-foo.ts:
[DATA] ? Select an option to continue:  
[DATA]  Accept
[DATA]   Edit
[DATA]   Discard
[DATA]  Select an option to continue:  Accept
[DATA] processing file: /index.ts
[DATA] Please view the migration changes for <tmp-path>/index.ts:
[DATA] ? Select an option to continue:  
[DATA]  Accept
[DATA]   Edit
[DATA]   Discard
[DATA]  Select an option to continue:  Edit
[DATA]  Select an option to continue:  Edit
[TITLE] Migration Complete
[TITLE]   3 JS files converted to TS
[TITLE]   4 errors caught by rehearsal
[TITLE]   3 have been fixed by rehearsal
[TITLE]   1 errors need to be fixed manually
[TITLE]     -- 0 ts errors, marked by @ts-expect-error @rehearsal TODO
[TITLE]     -- 1 eslint errors, with details in the report
[SUCCESS] Migration Complete
[SUCCESS]   3 JS files converted to TS
[SUCCESS]   4 errors caught by rehearsal
[SUCCESS]   3 have been fixed by rehearsal
[SUCCESS]   1 errors need to be fixed manually
[SUCCESS]     -- 0 ts errors, marked by @ts-expect-error @rehearsal TODO
[SUCCESS]     -- 1 eslint errors, with details in the report"
`;
